modified controllers, views, and config files

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,4 +8,4 @@ Keep track of yo' kids!
 
 <input type="text" name="">
 
-<input type="submit" name="" value="Log In"> OR <input type="submit" name="" value="Register">
+<input type="submit" id="login" value="Log In"> OR <input type="submit" id="register" value="Register">
