updated index to include just a login function, will deal w/ registration (add a new teacher) at another time. updated student_controller to handle routes for the login page (get and post routes) and the route to show all students immediately after login.

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,6 +6,8 @@ Keep track of yo' kids!
 
 <br><br>
 
-<input type="text" name="">
+<form action="/students" method="POST">
+	<input type="text" name="teacher[name]">
 
-<input type="submit" id="login" value="Log In"> OR <input type="submit" id="register" value="Register">
+	<input type="submit" id="login" value="Log In"> <!-- OR <input type="submit" id="register" value="Register"> -->
+</form>
